# foldercompare

./: .gitignore  .pre-commit-config.yaml  README.md  build_exe.bat  build_exe.sh  final_foldercompare.exe.spec  foldercompare.py  gui.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_foldercompare.py
