[project]
name = "foldercompare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyinstaller>=6.17.0"]
packages = { include = ['gui', 'foldercompare'] }

[project.gui-scripts]
foldercompare = "gui:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
